Add templates/menu_addons.html, fix bug

--- a/swiftbrowser/templates/base.html
+++ b/swiftbrowser/templates/base.html
@@ -13,7 +13,7 @@
                                 <b class="caret"></b>
                             </a>
                             <ul class="dropdown-menu">
-                                {% include "menuentry_password.html" %}
+                                {% include "menu_addons.html" %}
                                 <li>
                                     <a href="{% url "login" %}">
                                     <i class="icon-remove-sign"></i>
